--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,12 @@ banner.charset=UTF-8
 # Banner file location.
 banner.location=classpath:banner.txt
 
+# server port binding and application context
 server.port=3001
 server.servlet.context-path=/account
 
 logging.level.=INFO
-logging.file = /account-service/logs/raws.log
+logging.file = /account-microservice/logs/raws.log
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level  %class{36}.%M %L  - %msg%n
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level  %class{36}.%M %L  - %msg%n
 logging.level.com.example.account=DEBUG
@@ -26,15 +27,3 @@ hibernate.format_sql = false
 hibernate.hbm2ddl.auto=update
 hibernate.entity.packagesToScan=com.example.account.domain
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/account
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto = update
-
-
-
