--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 # BANNER
 # Banner file encoding.
 banner.charset=UTF-8
@@ -9,18 +8,20 @@ banner.location=classpath:banner.txt
 server.port=3001
 server.servlet.context-path=/account
 
+# Log configurations
 logging.level.=INFO
 logging.file = /account-microservice/logs/raws.log
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level  %class{36}.%M %L  - %msg%n
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level  %class{36}.%M %L  - %msg%n
 logging.level.com.example.account=DEBUG
 
-# Database
+# Database configurations
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/account
 jdbc.username = root
 jdbc.password = password
-# Hibernate
+
+# Hibernate configurations
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.format_sql = false
