Support for Oracle, PostgreSQL, & MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ banner.location=classpath:banner.txt
 
 # server port binding and application context
 server.port=3001
-server.servlet.context-path=/account
+server.servlet.context-path=/account-microservice
 
 # Log configurations
 logging.level.=INFO
@@ -15,16 +15,30 @@ logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level  %class{3
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level  %class{36}.%M %L  - %msg%n
 logging.level.com.example.account=DEBUG
 
-# Database configurations
-jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/account
-jdbc.username = root
-jdbc.password = password
+# Database configurations for MySQL DB
+#jdbc.driverClassName = com.mysql.jdbc.Driver
+#jdbc.url = jdbc:mysql://localhost:3306/account
+#jdbc.username = root
+#jdbc.password = password
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-# Hibernate configurations
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# Database configurations for PostgreSQL DB
+#jdbc.driverClassName = org.postgresql.Driver
+#jdbc.url = jdbc:postgresql://127.0.0.1:5432/postgres
+#jdbc.username = postgres
+#jdbc.password = password
+#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Database configurations for Oracle 19.3 DB
+jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
+jdbc.url = jdbc:oracle:thin:@localhost:1521:orcl
+jdbc.username = account
+jdbc.password = password
+hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+
+# Hibernate configurations (common for all DB)
 hibernate.show_sql=true
-hibernate.format_sql = false
-hibernate.hbm2ddl.auto=update
+hibernate.format_sql = true
+hibernate.hbm2ddl.auto=create
 hibernate.entity.packagesToScan=com.example.account.domain
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
