--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,45 @@
 	<artifactId>Account-Microservice</artifactId>
 	<version>1.0-PROD</version>
    	<packaging>jar</packaging>
-	<name>Account-Microservice</name>
-	<description>Microservice Example project with Spring Boot</description>
 
 	<properties>
 		<java.version>12</java.version>
 	</properties>
+	
+	<name>Account-Microservice</name>
+	<description>Microservice Example project with Spring Boot</description>
+	<url>https://github.com/rahamath18/Account-Microservice</url>
+
+	<organization>
+		<name>Personal</name>
+		<url>https://rahamaths.appspot.com/</url>
+	</organization>
+	
+	<developers>
+		<developer>
+			<id>rahamath18</id>
+			<name>Rahamath S</name>
+			<email>rahamath18@yahoo.com</email>
+			<organization>Personal</organization>
+			<roles>
+				<role>Project Lead</role>
+			</roles>
+			<timezone>GMT +5.30</timezone>
+		</developer>
+	</developers>
+	
+	<licenses>
+		<license>
+			<name>Community Project General License</name>
+			<url>https://rahamaths.appspot.com/</url>
+			<comments>
+				Copyright © 2003-2019 rahamaths.appspot.com. All rights reserved.
+				
+				As this is a Community Project General License, 
+				you may use the project or part of the project for your own explore and learnings.
+			</comments>
+		</license>
+	</licenses>
 
 	<dependencies>
 		<dependency>
